--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2240,7 +2240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The normality and assumption as seen through the Q-Q plot appears improved. Similarly, there are no discernible patterns in the residuals, having removed some of the heavy outliers. There was marginal loss in model performance( R SQUARED lower ) despite the improvemnts on the assumptions."
+    "The normality assumption as seen through the Q-Q plot appears improved. Similarly, there are no discernible patterns in the residuals, having removed some of the heavy outliers. There was marginal loss in model performance( R SQUARED lower ) despite the improvemnts on the assumptions."
    ]
   }
  ],
